syntax = "proto3";

//protoc -I api/protos/proto api/protos/proto/users.proto --go_out=./api/protos/gen/users --go_opt=paths=source_relative --go-grpc_out=./api/protos/gen/users/ --go-grpc_opt=paths=source_relative

package users;

option go_package = "blog.users;usersv1";

service UsersService{
  rpc GetUser (GetUserDTO) returns (GetUserRDO);
  rpc Subscribe (SubscribeDTO) returns (SubscribeRDO);
  rpc Unsubscribe (SubscribeDTO) returns (SubscribeRDO);
  rpc GetSubscribers (GetSubscribersDTO) returns (GetSubscribersRDO);
  rpc GetSubscriptions (GetSubscriptionsDTO) returns (GetSubscriptionsRDO);
  rpc UpdateUser (UpdateUserDTO) returns (UpdateUserRDO);
  rpc DeleteUser (DeleteUserDTO) returns (DeleteUserRDO);
  rpc UploadAvatar (UploadAvatarDTO) returns (UploadAvatarRDO);
}

message User{
  string id = 1;
  string email = 2;
  string fname = 3;
  string lname = 4;
  string created_date = 5;
  string updated_date = 6;
  string avatar = 7;
  string avatar_min = 8;
  bool is_deleted =9;
}

message UploadAvatarDTO{
  string user_id = 1;
  bytes image = 2;
}

message UploadAvatarRDO{
  string user_id = 1;
  string  avatar_url  = 2;
  string  avatar_mini_url  = 3;
}

message SubscribeDTO{
  string blogger_id = 1;
  string subscriber_id  =2;
}

message SubscribeRDO{
  bool is_subscribe = 1;
}

message UpdateUserItem{
  string name = 1;
  string value = 2;
}

message GetUserDTO{
  string id = 1;
}

message GetUserRDO{
  User user = 1;
}

message GetSubscribersDTO{
  string blogger_id = 1;
  int32 page = 2;
  int32 size = 3;
}

message GetSubscribersRDO{
  repeated User subscribers = 1;
  int32 total_count = 2;
}

message GetSubscriptionsDTO{
  string subscriber_id = 1;
  int32 page = 2;
  int32 size = 3;
}

message GetSubscriptionsRDO{
  repeated User subscriptions = 1;
  int32 total_count = 2;
}

message UpdateUserDTO{
  string id = 1;
  repeated UpdateUserItem updateData = 2;
}

message UpdateUserRDO{
  User user = 1;
}

message DeleteUserDTO{
  string id = 1;
}

message DeleteUserRDO{
  bool is_deleted = 1;
}

